[project]
name = "exporter_frameworks_isaaclab"
version = "0.1.0"
description = "IsaacLab-specific ONNX environment exporter implementation"
authors = [{ name = "Robotics and AI Institute LLC dba RAI Institute" }]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
isaaclab = ["isaaclab"]

[tool.setuptools.packages.find]
where = ["../../"]
include = ["exporter_frameworks.isaaclab*"]
namespaces = false
