# Copyright (c) 2026 Robotics and AI Institute LLC dba RAI Institute. All rights reserved.

[project]
name = "exploy-frameworks-isaaclab"
version = "0.1.0"
description = "IsaacLab-specific ONNX environment exporter implementation"
authors = [{ name = "Robotics and AI Institute LLC dba RAI Institute" }]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
isaaclab = ["isaaclab"]

[tool.setuptools.packages.find]
where = ["../../../../"]
include = ["exploy.exporter.frameworks.isaaclab*", "exploy.exporter.core*"]
namespaces = false
