# Copyright (c) 2026 Robotics and AI Institute LLC dba RAI Institute. All rights reserved.

[project]
name = "exploy-frameworks-mjlab"
version = "0.1.0"
description = "mjlab-specific ONNX environment exporter implementation"
authors = [{ name = "Robotics and AI Institute LLC dba RAI Institute" }]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
mjlab = ["mjlab"]

[tool.setuptools.packages.find]
where = ["../../../.."]
include = [
    "exploy.exporter.core*",
    "exploy.exporter.frameworks.manager_based*",
    "exploy.exporter.frameworks.mjlab*",
]
namespaces = false
